# tardis-sovereign

./: .gitignore  .sops.yaml  CHECKPOINT_BIG.md  CLAUDE.md  Dockerfile.python  Dockerfile.static  Dockerfile.template  GET_STARTED.md  LGM_STRATEGY.md  README.md  THE_PLAN.md  culture_graph_transmuted.jsonl  deep_magick_agents.csv  main.tf  manifest.json  outputs.tf  pyproject.toml  sovereign_discount_protocol.json  sovereign_swarm_crystallised.csv  sovereign_swarm_master_training.csv  sw.js  tardis_ai_test.py  terraform.tf  variables.tf
.github/workflows/: build-images.yml  ci.yml  deploy-k8s.yml  terraform.yml  workloads-plan.yml
apps/android/: settings.gradle.kts
apps/pwa/: deploy.sh  index.html
config/: default.yaml
infrastructure/civo/: Dockerfile  README.md  deploy.sh  serve.py
interviewer/: __init__.py  conversation.py  domains.py  router.py  templates.py  voice.py  web.py
k8s/apps/: app-template.yaml  bakk-online.yaml  claimourlife.yaml  hex-inventions.yaml  (+2 more)
lgm/: summary.md
opportunity_engine/: __init__.py  scanner.py  strategies.py  trades.py
phone_audit/: __init__.py  alternatives.py  auditor.py
psychic_paper/: __init__.py  context.py  engine.py  renderer.py  schemas.py
server/: .env  index.js  package-lock.json  package.json
sovereign_dispatch/: __init__.py  adaptive.py  budget.py  cache.py  compress.py  config.py  dispatch.py  router.py
tests/: test_adaptive.py  test_budget.py  test_cache.py  test_compress.py  test_dispatch.py  test_psychic_paper.py  test_router.py
workloads/: .gitignore  README.md  main.tf  terraform.tf  variables.tf
(+63 files in other folders)
